_k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-app-test
spec:
  type: NodePort
  selector:
    app: react-app-test
  ports:
    - port: 80
      targetPort: 80
