_k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-app-test-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: react-app-test.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-app-test
                port:
                  number: 80
